# MCU_NODE_ESP32

./: 404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  preview.bat  sitemap.xml  upload.sh  win-upload.bat
ARCHITECTURE/ARCHITECTURE/architecture/: index.html
ARCHITECTURE/ESP_IDF/esp_idf/: index.html
ARCHITECTURE/MICROPYTHON/micropython/: index.html
ARCHITECTURE/ROADMAP/roadmap/: index.html
ARCHITECTURE/architecture/: index.html
CODE/CMAKE/cmakelists/: index.html
CODE/COMPONENTS/components/: index.html
CODE/COMPONENTS/components-cmakelists/: index.html
CODE/MAIN/main/: index.html
CODE/MAIN/main-cmakelists/: index.html
CODE/TINYSHM/tinyshm/: index.html
CODE/code/: index.html
COMMUNICATION/communication/: index.html
DEV_LATEST copy/components/setup/: setup.h
DEV_LATEST copy/main/: main.h
DEV_LATEST/components/sdio/: spi_sdcard.c
DEV_LATEST/components/setup/: setup.h
DEV_LATEST/components/spi/: spi.c  spi.h
DEV_LATEST_MPU6050/components/i2c/: esp_i2c.c  esp_i2c.h
DEV_LATEST_MPU6050/components/mpu6050/: mpu6050.c  mpu6050.h
DEV_LATEST_MPU6050/components/sdio/: exfuns.h
DEV_LATEST_MPU6050/main/: main.c
DEV_LATEST_MPU6050_OFFICIAL/components/: CMakeLists.txt
DEV_LATEST_MPU6050_OFFICIAL/components/i2c/: esp_i2c.c  esp_i2c.h
DEV_LATEST_MPU6050_OFFICIAL/components/mpu6050/: mpu6050.c  mpu6050.h
DEV_LATEST_MPU6050_OFFICIAL/components/sdio/: spi_sdcard.h
DEV_LATEST_MPU6050_OFFICIAL/components/setup/: setup.h
DEV_LATEST_MPU6050_OFFICIAL/main/: main.c
DEV_LATEST_MPU6050_PRE_OK/components/: CMakeLists.txt
DEV_LATEST_MPU6050_PRE_OK/components/i2c/: esp_i2c.c  esp_i2c.h
DEV_LATEST_MPU6050_PRE_OK/components/mpu6050/: mpu6050.c  mpu6050.h  mpu6050_reg.h
DEV_LATEST_MPU6050_PRE_OK/components/setup/: setup.h
DEV_LATEST_MPU6050_PRE_OK/components/spi/: spi.h
DEV_LATEST_MPU6050_PRE_OK/main/: main.c
DEV_LATEST_VERSION/: CMakeLists.txt
DEV_LATEST_VERSION/components/exit/: exit.h
DEV_LATEST_VERSION/components/i2c/: i2c.c
DEV_LATEST_VERSION/components/rgb/: rgb.c
DEV_LATEST_VERSION/components/sdio/: spi_sdcard.c
DEV_LATEST_VERSION/components/spiffs/: spiffs.h
DEV_LATEST_VERSION/main/: main.c
DEV_REF_ATK/0-资料/: Readme.txt
DEV_REF_ATK/1-视频教程/: readme.txt
DEV_REF_ATK/2-原理图_SCHEMATIC_DIAGRAM/: readme.txt
DEV_REF_ATK/DNESP32S3M/2-原理图_SCHEMATIC_DIAGRAM/: DNESP32S3M IO引脚分配表.xlsx  readme.txt
ESP32-FRONTIER copy/: CMakeLists.txt
ESP32-FRONTIER copy/components/LCD/: lcd.c
ESP32-FRONTIER copy/components/RGB/: rgb.h
ESP32-FRONTIER copy/main/: CMakeLists.txt  main.c
ESP32-FRONTIER copy/tinyshm/: CMakeLists.txt
ESP32-FRONTIER-DHT11/components/: CMakeLists.txt
ESP32-FRONTIER-DHT11/components/DHT11/: dht11.c
ESP32-FRONTIER-DHT11/components/LED/: led.c  led.h
ESP32-FRONTIER-DHT11/components/SDIO/: exfuns.c
ESP32-FRONTIER-DHT11/main/: main.c
ESP32-FRONTIER/components/: CMakeLists.txt
ESP32-FRONTIER/components/BSP/: CMakeLists.txt
ESP32-FRONTIER/components/BSP/LED/: led.c  led.h
ESP32-FRONTIER/components/BSP/SPI/: spi.c
ESP32-FRONTIER/components/DHT11/: dht11.h
ESP32-FRONTIER/components/EXIT/: exit.c  exit.h
ESP32-FRONTIER/components/KEY/: key.c  key.h
ESP32-FRONTIER/components/LCD/: lcd-back.c  lcd-back.h  lcdfont-back.h
ESP32-FRONTIER/components/LED/: led.c  led.h
ESP32-FRONTIER/components/RGB/: rgb.c  rgb.h
ESP32-FRONTIER/components/SDIO/: spi_sdcard.c
ESP32-FRONTIER/components/SPI/: spi-back.c  spi-back.h  spi.h
ESP32-FRONTIER/main/: main.c
ESP32/ESP32/: index.html
ESP32/ESP_IDF/esp_idf/: index.html
ESP32/MICROPYTHON/micropython/: index.html
ESP_IDF/DNESP32S3M/00_basic/: CMakeLists.txt  sdkconfig.old
ESP_IDF/ESP32-S3-DevKitC-1/myproject/: CMakeLists.txt
FRONTIER copy/: sdkconfig.old
FRONTIER/components/: CMakeLists.txt
FRONTIER/components/RNG/: rng.c  rng.h
FRONTIER/components/RTC/: esp_rtc.c  esp_rtc.h
FRONTIER/components/SDIO/: spi_sdcard.c  spi_sdcard.h
FRONTIER/components/SPI/: spi.c
FRONTIER/components/SPIFFS/: spiffs.c  spiffs.h
FRONTIER/components/TEMP/: temp.c  temp.h
FRONTIER/components/TIM/: tim.c  tim.h
FRONTIER/main/: main.c
INSTRUCTIONS/instructions/: index.html
INTERFACING/interfacing/: index.html
MAIN-CONTROL/main-control/: index.html
MCU_DOC/: mkdocs.yml
MCU_DOC/docs/: index.en.md  index.zh.md
MCU_DOC/site/: 404.html  feed_rss_created.xml  feed_rss_updated.xml  index.html  sitemap.xml
PERCEPTION/perception/: index.html
REF/DNESP32S3/: DNESP32S3.zh.md
REF/ESP32-S3-DEVKITC-1/: ESP32-S3-DEVKITC-1.en.md  ESP32-S3-DEVKITC-1.zh.md
RELEASE/release/: index.html
SENSING/sensing/: index.html
TEMPLATE/components/: CMakeLists.txt
TEMPLATE/components/adxl355/: adxl355.c
TEMPLATE/components/rtc/: esp_rtc.c
TEMPLATE/components/sdio/: spi_sdcard.h
TEMPLATE/components/setup/: setup.h
TEMPLATE/main/: CMakeLists.txt
TEMPLATE_ADXL355_BACKUP/: sdkconfig.old
TEMPLATE_ADXL355_ONGOING/components/: CMakeLists.txt
TEMPLATE_ADXL355_ONGOING/components/adxl355/: adxl355.h
TEMPLATE_ADXL355_ONGOING/components/led/: led.h
TEMPLATE_ADXL355_ONGOING/main/: main.c  main.h
TEMPLATE_BACKUP/components/: CMakeLists.txt
TEMPLATE_BACKUP/main/: CMakeLists.txt  main.c  main.h
TEMPLATE_FS/main/: main.c
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD/components/: CMakeLists.txt
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD/components/key/: key.h
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD/components/setup/: setup.h
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD/main/: main.c  main.h
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC/components/: CMakeLists.txt
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC/main/: main.c  main.h
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC/tinyshm/: CMakeLists.txt
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC_RNG/components/: CMakeLists.txt
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC_RNG/main/: main.c  main.h
TEMPLATE_LED_RGB_KEY_EXIT_SPI_LCD_TIM_RTC_RNG_SPIFFS/main/: main.c  main.h
blog/: index.html
search/: search_index.json
zh/: index.html
zh/blog/: index.html
(+365 files in other folders)
